<resources>
    <string name="app_name">瑞易贷</string>
    <string name="c_availbale_credit">可用额度</string>
    <string name="c_daily_interest_rate">日利率%1$s</string>
    <string name="c_interest_tip_1">1千元借用1天利息仅%1$s为</string>
    <string name="c_promote_quota">我要提额</string>
    <string name="c_borrowing_records">借还记录</string>
    <string name="c_borrowing_money">我要借款</string>
    <string name="c_repayment">我要还款</string>
    <string name="c_newer_guide">新 手 指 引</string>
    <string name="c_common_problem">常见问题</string>
    <string name="c_credit_opening">信用额度陆续开放中...</string>
    <string name="c_limit_of_credit">请您稍后,正在为您处理中~</string>
    <string name="c_estimate_not_gone">对不起，您的额度审核未通过</string>
    <string name="c_estimate_not_gone_tip">为了提高您的信用等级，请合理使用瑞银信手刷业务</string>
    <string name="c_authorization_RuiFuXiaoDai_info">授权瑞蚨小贷访问您的手机运营商获取信息</string>
    <string name="c_person_info">个人信息</string>
    <string name="c_work_info">工作信息</string>
    <string name="c_callRecords_info">运营商信息</string>
    <string name="c_facerecognition_info">人脸识别</string>
    <string name="c_pedestrianletter_info">人行征信报告 </string>
    <string name="c_jingdong_info">京东验证 </string>
    <string name="c_creditcardbill_info">信用卡账单认证 </string>
    <string name="c_taobao_info">淘宝认证 </string>
    <string name="xjd_c_quota_activation">额度激活 </string>
    <string name="c_apply_info">申请信息</string>
    <string name="c_other_info">其他信息</string>
    <string name="c_next">下一步</string>
    <string name="c_pre">上一步</string>
    <string name="c_complete">完成</string>
    <string name="c_person_info_tips">为确保您的申请通过，请如实填写并仔细核对。</string>
    <string name="c_person_home_address">家庭住址</string>
    <string name="c_person_home_address_tip_1">选择家所在城市</string>
    <string name="c_person_home_address_tip_2">填写详细住址</string>
    <string name="c_marital_status">婚姻状况</string>
    <string name="c_marital_status_tip">请选择婚姻状况</string>
    <string name="c_relationship">联系人关系</string>
    <string name="c_relationship_tip">请选择联系人关系</string>
    <string name="c_relationship_name">紧急联系人姓名</string>
    <string name="c_relationship_name_tip">请填写联系人姓名</string>
    <string name="c_relationship_mobile">联系人电话</string>
    <string name="c_legal_person_shareholder">是否法人或股东</string>
    <string name="c_relationship_mobile_tip">填写联系人手机号码</string>
    <string name="c_work_address">工作地址</string>
    <string name="c_work_address_tip1">选择公司所在城市</string>
    <string name="c_work_address_tip2">请输入经营地址</string>
    <string name="c_work_detailaddress_tip2">详细地址</string>
    <string name="c_work_detailaddress">请输入公司详细地址</string>
    <string name="c_work_company_name">公司名称</string>
    <string name="c_work_company_name_tip">请输入公司全称</string>
    <string name="c_work_company_telephone">公司电话</string>
    <string name="c_work_company_address">公司地址</string>
    <string name="c_work_operating_address">经营地址</string>
    <string name="c_unified_social_credit_code">社会信用码\n或营业执照注册号</string>
    <string name="c_monthly_turnover">月营业额(万)</string>
    <string name="c_work_company_detailaddress">公司详细地址</string>
    <string name="c_work_company_telephone_tip">公司电话</string>
    <string name="c_work_profession">行业分类</string>
    <string name="c_work_profession_tips">请选择行业分类</string>
    <string name="c_monthly_turnover_tips">请输入月营业额</string>
    <string name="c_unified_social_credit_code_tips">请输入社会信用码或营业执照注册号</string>
    <string name="c_work_position">职位</string>
    <string name="c_work_position_tip">填写所担任职位</string>
    <string name="c_work_month_money">月收入</string>
    <string name="c_work_month_money_tip">请选择月收入范围</string>
    <string name="c_apply_education_level">教育程度</string>
    <string name="c_apply_education_level_tip">请选择教育信息</string>
    <string name="c_apply_email">电子邮箱</string>
    <string name="c_apply_email_tip">填写信用卡账单地址</string>
    <string name="c_apply_weixin">微信号</string>
    <string name="c_apply_weixin_tip">填写微信号</string>
    <string name="c_apply_month_money">月收入</string>
    <string name="c_apply_month_money_tip">填写月收入</string>
    <string name="c_apply_id_address">证件地址</string>
    <string name="c_apply_id_address_tip">填写证件地址</string>
    <string name="c_other_car_model">车辆型号</string>
    <string name="c_other_car_model_tip">填写车辆型号</string>
    <string name="c_other_car_brand">车辆品牌</string>
    <string name="c_other_car_brand_tip">填写车辆品牌</string>
    <string name="c_other_zhima_credit">芝麻信用</string>
    <string name="c_other_zhima_credit_tip">填写淘宝号</string>
    <string name="c_other_car_no">车牌号</string>
    <string name="c_other_car_no_tip">填写车牌号</string>
    <string name="c_sixchooseone_creditcardbill">请使用接受信用卡账单的邮箱进行授权</string>
    <string name="c_sixchooseone_creditcardbill_account_number">邮箱账号</string>
    <string name="c_sixchooseone_creditcardbill_account_number_hint">请输入邮箱账号</string>
    <string name="c_sixchooseone_creditcardbill_password">邮箱密码</string>
    <string name="c_sixchooseone_creditcardbill_password_hint">请输入邮箱密码</string>
    <string name="c_sixchooseone_jingdong">为保证通过率建议填写常用京东账号</string>
    <string name="c_sixchooseone_jingdong_account_number">京东账号</string>
    <string name="c_sixchooseone_jingdong_account_number_hint">请输入京东账号</string>
    <string name="c_sixchooseone_jingdong_password">京东密码</string>
    <string name="c_sixchooseone_jingdong_password_hint">请输入京东密码</string>
    <string name="c_sixchooseone_taobao">为保证通过率建议填写常用淘宝账号或手机号</string>
    <string name="c_sixchooseone_taobao_account_number">淘宝账号</string>
    <string name="c_sixchooseone_taobao_account_number_hint">请输入淘宝账号</string>
    <string name="c_sixchooseone_taobao_password">淘宝密码</string>
    <string name="c_sixchooseone_taobao_password_hint">请输入淘宝密码</string>
    <string name="c_sixchooseone_taobaoaccount_login">淘宝号登陆</string>
    <string name="c_sixchooseone_taobaophonenum_login">手机号</string>
    <string name="c_sixchooseone_taobaophonenum_login_hint">请输入手机号码</string>
    <string name="c_sixchooseone_taobaverificationcode_login">验证码</string>
    <string name="c_sixchooseone_taobaverificationcode_login_hint">请输入验证码</string>
    <string name="c_taobao_get_verification_code">发送验证码 </string>
    <string name="c_repayment_money">还款记录</string>
    <string name="c_repayment_contract">还款合同</string>
    <string name="c_repayment_overdue">逾期罚息</string>
    <string name="c_repayment_swiper">刷卡支付</string>
    <string name="c_repayment_swiper_comment">(只支持借记卡)</string>
    <string name="c_repayment_auto">协议代扣</string>
    <string name="c_repayment_auto_comment">(代扣卡还款)</string>
    <string name="c_repayment_sure">确认还款</string>
    <string name="c_repayment_sum_interest">
		<![CDATA[应还金额 <font color=\"#1db7f0\"> %1$s</font>]]></string>
    <string name="c_borrow_money_deadline">借款期限</string>
    <string name="c_borrow_money_amount">借款到账金额：</string>
    <string name="c_borrow_money_range">1-21天</string>
    <string name="c_borrow_money_calculate_costs">费用计算</string>
    <string name="c_borrow_money_total_interest">
		<![CDATA[总利息 <font color=\"#1db7f0\"> %1$s</font>]]></string>
    <string name="c_borrow_money_counter_fee">
		<![CDATA[手续费 <font color=\"#1db7f0\"> %1$s</font>]]></string>
    <string name="c_borrow_choose_bank_no">选择收款账户（信用卡）</string>
    <string name="c_return_choose_bank_no">选择还款账户（储蓄卡）</string>
    <string name="c_borrow_bank_no">收款账户</string>
    <string name="c_df_card_no">选择收款账户（储蓄卡）</string>
    <string name="c_borrow_change">更换</string>
    <string name="c_borrow_tip1">到期自动扣款，可主动还款</string>
    <string name="c_borrow_tip2">查看支持还款银行列表</string>
    <string name="df_bank_list">查看支持收款银行列表</string>
    <string name="see_bank_list">查看支持银行列表</string>
    <string name="c_borrow_loan">借款</string>
    <string name="c_sure_borrow">确认借款</string>
    <string name="c_repay_plan">还款计划</string>
    <string name="c_view_detail">查看详情</string>
    <string name="c_sure_borrow_amount">借款本金</string>
    <string name="c_ryd_pending_amount">待还金额</string>
    <string name="c_sure_borrow_receive_bank_no">收款账户（信用卡）</string>
    <string name="c_sure_borrow_huankuan_bank_no">还款账户（储蓄卡）</string>
    <string name="c_sure_borrow_total_interest">总利息</string>
    <string name="c_sure_borrow_day_rate">日利率</string>
    <string name="c_sure_borrow_start_end_time">起止日期</string>
    <string name="c_sure_borrow_longest_time">借款期限</string>
    <string name="c_sure_borrow_repay_bank_no">还款账户</string>
    <string name="c_sure_borrow_repayment_metod">还款方式</string>
    <string name="c_sure_borrow_lenders">贷款发放人</string>
    <string name="c_sure_borrow_borrower">借款人</string>
    <string name="c_sure_borrow_borrower_id">借款人身份证</string>
    <string name="c_common_mobile">我们给您的手机号</string>
    <string name="c_common_checkno">发送了一条验证码</string>
    <string name="c_common_input_verify_code">输入验证码</string>
    <string name="c_common_send_verify_code">发送验证码</string>
    <string name="c_sure_borrow_tip1">
		<![CDATA[请您仔细核对好借款信息，点击确认借款按钮表示同意 <font color=\"#1db7f0\"> 《瑞商贷借款服务协议》</font>]]></string>
    <string name="c_sure_borrow_tipryd">
		<![CDATA[请您仔细核对好借款信息，点击确认借款按钮表示同意 <font color=\"#1db7f0\"> 《瑞易贷借款服务协议》</font>]]></string>
    <string name="c_sure_borrow_tiprkd">
		<![CDATA[请您仔细核对好借款信息，点击确认借款按钮表示同意 <font color=\"#1db7f0\"> 《瑞卡贷借款服务协议》</font>]]></string>
    <string name="c_sure_borrow_tip2">逾期信息将写入您的信征报告中，请珍惜您的个人信用记录</string>
    <string name="c_common_base_info">基本信息</string>
    <string name="c_common_contact_info">运营商信息</string>
    <string name="c_common_must_input_tip">必填项，获取基本额度</string>
    <string name="c_common_gongjijin_renzheng">公积金认证</string>
    <string name="c_common_option_input_tip">选填项，获取更高额度</string>
    <string name="c_common_shebao_renzheng">社保认证</string>
    <string name="c_common_taxes_renzheng">纳税认证</string>
    <string name="c_common_yanghang_renzheng">央行征信认证</string>
    <string name="c_sure_apply">确认申请</string>
    <string name="c_borrow_record_apply">申请中</string>
    <string name="c_borrow_record_unpayment">待还款</string>
    <string name="c_borrow_record_haspayed">已结清</string>
    <string name="c_borrow_quickly_repment">快速还款</string>
    <string name="c_borrow_record_current_payment">
		<![CDATA[<font color=\"#1db7f0\">当期应还金额 %1$s</font>]]></string>
    <string name="c_repay_total_owe_amount">
		<![CDATA[<font color=\"#1db7f0\">剩余应还总额 %1$s</font>]]></string>
    <string name="c_borrow_record_current_remaining_payment">
		<![CDATA[<font color=\"#1db7f0\">本期应还金额 %1$s</font>]]></string>
    <string name="c_ruikadai_tip2">《瑞卡贷产品服务协议》</string>
    <string name="c_ruiyidai_tip2">《瑞易贷产品服务协议》</string>
    <string name="c_borrow_record_current_payment_tip"><![CDATA[逾期手续费=未还合同金额*<font>%1$s</font>*逾期天数]]></string>
    <string name="c_be_using">使用中</string>
    <string name="c_repayment_date">还款日</string>
    <string name="c_pay_account">收款账户</string>
    <string name="c_month_rate">月利率</string>
    <string name="c_all_interest">总利息</string>
    <string name="c_start_and_end_date">起止日期</string>
    <string name="c_borrow_term">借款期限</string>
    <string name="c_repayment_account">还款账户</string>
    <string name="c_repayment_style">还款方式</string>
    <string name="c_show_repayment">查看还款记录</string>
    <string name="c_quik_repayment">快速还款</string>
    <string name="c_borrow_record">借款详情</string>
    <string name="c_activate_credit_line_tip">激活信用额度，急速放款</string>
    <string name="c_activate_credit_line_tip_1">补充信息及3张信用卡资料，快速激活</string>
    <string name="c_activate_credit_line_tip_2">添加更多信用卡将有助于提高您的额度</string>
    <string name="c_credit_card">信用卡</string>
    <string name="c_add_more">添加更多</string>
    <string name="c_activate">激活</string>
    <string name="c_cash_loan">现金贷</string>
    <string name="perfect_info">完善信用卡信息</string>
    <string name="htjc_main_title">人脸识别</string>
    <string name="htjc_main_remind1">* 请在光线充足的地方认证</string>
    <string name="htjc_main_remind2">* 请注意画面中的动作</string>
    <string name="htjc_main_remind3">* 请在提示语音结束后做相应操作</string>
    <string name="htjc_main_remind4">* 请小幅晃动手机</string>
    <string name="htjc_main_remind5">* 为避免借款失败，请确保本人操作</string>
</resources>